lesson6/css/small.css
/*
Colors:
Orange: #e0995e
Dark Blue: #4f5d73
Light Grey: #d7dedc
Near Black: #3d2b3d
Dark Grey: #635d5c

Fonts:
'Amita'
'Amiko'
*/
body{
    background-color:#4f5d73;
    color: #3d2b3d;
    font-family: 'amiko', sans-serif;
}
h1{ font-family: 'amita', serif;}
header{
    display: grid;
    grid-template-columns: 1fr 3fr;
    color:white;
    background-color: #635d5c;
    padding: 1em; 
}
header p{
    grid-column: 1/3;
    text-align: center;
    font-style: italic;
}
header img{
    width: 6em;
    border:5px solid #e0995e ;
    border-radius: 50%;
}
header h1{
    margin: 1em;
    font-size: 1.75rem;
}

nav {
	background-color: #3d2b3d;
    text-align: center; 
    margin: 0 auto;
}
.navigation {
	list-style: none;
	margin: 0;
	padding: 0;
}
.navigation li:first-child {
	display: block;
}
.navigation li {
	display: none;
}
.navigation a {
	display: block;
	color: #d7dedc;
	text-align: center;
	padding: 0.75rem;
	text-decoration: none;
    font-size: 0.95rem;
}
.active{
    text-decoration: underline #d7dedc;
}
nav a:hover {
	background-color: #e0995e;
    color: #3d2b3d;
    font-weight: 700;
}
.active a:hover{
    background-color: #4f5d73;
    color: #d7dedc;
}

.responsive li {
	display: block;
}

section, article{
    padding: 1.5em;
    margin: 2em 0 0 0;
}
.contact{
    background-color: #635d5c;
    color: #d7dedc;
    text-align: center;
}
.herodiv{
    position: relative;
    padding: 0;
}
.heroimg{
    box-shadow:  0 0 30px;
}
.summary{
    display: block;
    background: radial-gradient(#eee, #bfbfbf);
    border: 1px solid #4f5d73;
    box-shadow: 0 0 30px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: .5em;
    font-size: .75rem;
    color: #000000;
}
.summary h3{
    grid-column:1/3;
    text-align: center;
}
.category{
    grid-column: 1/2;
    text-align: right;
}
.condition{
    grid-column: 2/3;
}
.forecast{
    display: none;
}
article, .forecast{
    background-color: #d7dedc;
    color: #3d2b3d;
    box-shadow: 0 0 40px;
}
.town {
    text-align: center;
    color: #d7dedc;
}
main{
    display:block;
    padding: 1em;
}
.map{
    display: none;
}
.contact ul{
    list-style: none;
}

footer{
    background-color: #3d2b3d;
    text-align: center; 
    color:#d7dedc;
    padding: 1em;
}
footer a{
    color:#d7dedc;
}
.heroimg{
    max-width: 100%;
}
#bannerad{
    background-color: #e0995e;
    color: #3d2b3d;
    padding:1em 2em 1em 2em;
    text-align: center;
    display: none;

}
article{
    display: block;
}

